Fixed spacing on mobile

--- a/gk-portfolio/src/global.css
+++ b/gk-portfolio/src/global.css
@@ -427,7 +427,7 @@ Mobile Styles
   }
 
   .g_projects-container {
-    margin-top: -200px;
+    margin-top: -185px;
 }
 
 
